--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "eslint-plugin-react": "^7.13.0",
     "prettier-eslint": "^8.8.2"
   }
 }
